# microohm

./: .gitignore  LICENSE  README.md  build_microohm.py  build_units.py  pyproject.toml
microohm/: __init__.py  absolute.c  add.c  casts.c  casts.h  character_set.py  divide.c  exceptions.py  factors.py  greater.c  less.c  lexer.py  maximum.c  minimum.c  multiply.c  negative.c  parser.py  quantity.py  quantitydtype.c  quantitydtype.h  quantitydtype_module.c  subtract.c  umath.h  units.c  units_definitions.py  units_dtype.c  units_dtype.h
